--- a/provisoria.html
+++ b/provisoria.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perda da Provisória - CNH em Dia Soluções</title>
-    <meta name="description" content="Defesa para condutores em período probatório. Orientação especializada para evitar a perda da CNH provisória.">
+    <meta name="description" content="Orientação especializada para condutores em período probatório. Entenda como evitar a perda da CNH provisória com suporte técnico e administrativo.">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -24,160 +24,103 @@
             </div>
         </nav>
     </header>
+
     <div class="content-page">
         <div class="content-wrapper">
             <h1>Perda da CNH Provisória</h1>
             
-            <p>A CNH provisória, também conhecida como Permissão para Dirigir (PPD), é o documento emitido para condutores recém-habilitados que devem cumprir um período probatório de 12 meses. Durante este período, o condutor está sujeito a regras mais rígidas e pode perder sua habilitação mais facilmente do que condutores experientes.</p>
+            <p>A CNH provisória, também conhecida como Permissão para Dirigir (PPD), é o documento emitido para condutores recém-habilitados que devem cumprir um período probatório de 12 meses. Durante esse período, o condutor está sujeito a regras mais rigorosas e pode perder a habilitação mais facilmente que condutores experientes.</p>
 
             <h2>O que é a CNH Provisória?</h2>
             
-            <p>A CNH provisória é o documento que autoriza o recém-habilitado a dirigir durante o primeiro ano após a aprovação nos exames de habilitação. Este período probatório tem como objetivo permitir que o novo condutor adquira experiência prática no trânsito sob regras mais rigorosas de fiscalização.</p>
+            <p>A CNH provisória é o documento que autoriza o recém-habilitado a dirigir durante o primeiro ano após a aprovação nos exames de habilitação. Esse período probatório tem como objetivo permitir que o novo condutor adquira experiência prática no trânsito sob regras mais rígidas de fiscalização.</p>
 
-            <p>Durante os 12 meses de validade da provisória, o condutor deve demonstrar comportamento responsável no trânsito. Ao final deste período, se não houver cometido infrações que impeçam, a CNH provisória é automaticamente convertida em CNH definitiva.</p>
+            <p>Durante os 12 meses de validade da provisória, o condutor deve demonstrar comportamento responsável no trânsito. Ao final desse período, se não houver cometido infrações impeditivas, a CNH provisória é automaticamente convertida em CNH definitiva.</p>
 
             <h2>Regras Especiais do Período Probatório</h2>
 
             <h3>Tolerância Zero para Infrações Graves</h3>
-            <p>Condutores com CNH provisória não podem cometer nenhuma infração de natureza grave ou gravíssima durante o período probatório. Qualquer infração grave ou gravíssima resulta automaticamente na cassação da permissão para dirigir.</p>
+            <p>Condutores com CNH provisória não podem cometer nenhuma infração de natureza grave ou gravíssima. Qualquer infração dessa natureza resulta automaticamente na perda da permissão para dirigir.</p>
 
             <h3>Limite de Pontos Reduzido</h3>
-            <p>Enquanto condutores com CNH definitiva podem acumular até 40 pontos (ou 30/20 em casos específicos) antes da suspensão, condutores com provisória perdem a habilitação ao atingir apenas 20 pontos em infrações médias ou leves.</p>
+            <p>Enquanto condutores com CNH definitiva podem acumular até 40 pontos (ou 30/20 em casos específicos), condutores com provisória perdem a habilitação ao atingir 20 pontos em infrações médias ou leves.</p>
 
-            <h3>Proibição de Dirigir Veículos de Terceiros para Fins Comerciais</h3>
+            <h3>Proibição de Atividade Remunerada</h3>
             <p>Durante o período probatório, o condutor não pode exercer atividade remunerada como motorista profissional, mesmo que possua a categoria adequada.</p>
 
-            <h3>Restrições para Mudança de Categoria</h3>
-            <p>O condutor com CNH provisória não pode solicitar mudança de categoria ou adição de nova categoria até a conversão para CNH definitiva.</p>
+            <h3>Restrições de Categoria</h3>
+            <p>O condutor com CNH provisória não pode solicitar mudança ou adição de categoria até a conversão para CNH definitiva.</p>
 
             <div class="highlight-box">
-                <h3>⚠️ Atenção Especial</h3>
-                <p>Uma única infração grave ou gravíssima durante o período probatório resulta na perda imediata da CNH provisória. Isso significa que o condutor terá que refazer todo o processo de habilitação após 2 anos.</p>
+                <h3>⚠️ Atenção</h3>
+                <p>Uma única infração grave ou gravíssima durante o período probatório resulta na perda imediata da CNH provisória. Isso obriga o condutor a refazer todo o processo de habilitação após dois anos.</p>
             </div>
 
             <h2>Motivos para Perda da Provisória</h2>
 
-            <h3>Infrações Graves ou Gravíssimas</h3>
-            <p>Qualquer infração classificada como grave ou gravíssima resulta automaticamente na cassação da CNH provisória. Exemplos incluem:</p>
-
             <ul>
-                <li>Excesso de velocidade superior a 20% do limite</li>
-                <li>Avançar sinal vermelho</li>
-                <li>Dirigir sem cinto de segurança</li>
-                <li>Usar celular ao volante</li>
-                <li>Dirigir sob efeito de álcool</li>
-                <li>Estacionar em vaga de deficiente sem autorização</li>
-                <li>Transitar pelo acostamento</li>
+                <li>Cometimento de infração grave ou gravíssima</li>
+                <li>Acúmulo de 20 pontos em infrações médias ou leves</li>
+                <li>Reincidência em infrações médias dentro de 12 meses</li>
             </ul>
 
-            <h3>Acúmulo de 20 Pontos</h3>
-            <p>O acúmulo de 20 pontos em infrações leves e médias durante o período probatório também resulta na perda da provisória. É importante monitorar constantemente a pontuação para evitar surpresas.</p>
-
-            <h3>Reincidência em Infrações Médias</h3>
-            <p>A reincidência em infrações de natureza média dentro do período de 12 meses pode resultar na cassação da provisória, mesmo sem atingir o limite de pontos.</p>
-
-            <h2>Consequências da Perda da Provisória</h2>
-
-            <h3>Cassação da Habilitação</h3>
-            <p>A perda da CNH provisória é tratada como cassação, não como suspensão. Isso significa que o condutor perde completamente o direito de dirigir e deverá aguardar 2 anos para refazer todo o processo de habilitação.</p>
-
-            <h3>Necessidade de Refazer o Processo Completo</h3>
-            <p>Após o período de 2 anos, o condutor terá que:</p>
+            <h2>Consequências da Perda</h2>
 
             <ul>
-                <li>Realizar novamente os exames médicos e psicotécnicos</li>
-                <li>Frequentar o curso teórico completo</li>
-                <li>Ser aprovado no exame teórico</li>
-                <li>Realizar todas as aulas práticas obrigatórias</li>
-                <li>Ser aprovado no exame prático de direção</li>
-                <li>Cumprir novo período probatório de 12 meses</li>
+                <li><strong>Cassação da habilitação:</strong> o condutor perde totalmente o direito de dirigir e deve aguardar 2 anos para refazer o processo.</li>
+                <li><strong>Refazer o processo de habilitação:</strong> exames médicos, teóricos e práticos precisam ser realizados novamente.</li>
+                <li><strong>Custos adicionais:</strong> novas taxas, aulas e tempo investido.</li>
+                <li><strong>Restrição de mobilidade:</strong> o condutor fica impedido de dirigir durante o período de cassação.</li>
             </ul>
 
-            <h3>Custos Financeiros</h3>
-            <p>Refazer todo o processo de habilitação envolve custos significativos com taxas, exames, aulas e documentação, além do tempo investido.</p>
+            <h2>Como Evitar a Perda da CNH Provisória</h2>
 
-            <h3>Impacto na Mobilidade</h3>
-            <p>Durante os 2 anos de cassação, o condutor fica impossibilitado de dirigir, dependendo de transporte público ou terceiros para sua locomoção.</p>
-
-            <h2>Como Evitar a Perda da Provisória</h2>
-
-            <h3>Atenção Redobrada no Trânsito</h3>
-            <p>Durante o período probatório, é fundamental ter atenção redobrada às regras de trânsito. Evite comportamentos de risco e respeite rigorosamente a sinalização e os limites de velocidade.</p>
-
-            <h3>Conhecimento das Regras</h3>
-            <p>Muitos condutores perdem a provisória por desconhecerem as regras específicas do período probatório. Informe-se sobre todas as restrições e exigências aplicáveis.</p>
-
-            <h3>Contestação Imediata de Multas</h3>
-            <p>Ao receber qualquer notificação de infração grave ou gravíssima, busque imediatamente assessoria para contestar a multa. Mesmo que você acredite ter cometido a infração, pode haver vícios formais que permitam a anulação.</p>
-
-            <h3>Monitoramento de Pontos</h3>
-            <p>Acompanhe regularmente sua pontuação no DETRAN. Se estiver próximo dos 20 pontos, redobre a atenção e considere contestar multas anteriores.</p>
+            <ul>
+                <li><strong>Atenção redobrada:</strong> respeite rigorosamente a sinalização e os limites de velocidade.</li>
+                <li><strong>Conhecimento das regras:</strong> entenda todas as restrições do período probatório.</li>
+                <li><strong>Contestação administrativa:</strong> ao receber qualquer notificação de infração grave ou gravíssima, busque imediatamente orientação técnica para avaliar a possibilidade de recurso administrativo.</li>
+                <li><strong>Monitoramento constante:</strong> acompanhe sua pontuação no DETRAN para evitar surpresas.</li>
+            </ul>
 
             <div class="highlight-box">
                 <h3>💡 Dica Importante</h3>
-                <p>Não espere a notificação de cassação para buscar ajuda. Ao receber a primeira multa grave ou gravíssima durante o período probatório, procure imediatamente assessoria especializada para contestá-la.</p>
+                <p>Ao receber qualquer multa durante o período probatório, busque suporte técnico para entender as opções administrativas disponíveis antes que o processo de cassação seja instaurado.</p>
             </div>
 
-            <h2>Defesa Contra Perda da Provisória</h2>
+            <h2>Processo Administrativo de Cassação</h2>
 
-            <h3>Contestação da Infração</h3>
-            <p>A primeira linha de defesa é contestar a infração que motivou o processo de cassação. Se houver sucesso na anulação da multa, o processo de perda da provisória é automaticamente encerrado.</p>
-
-            <h3>Identificação de Vícios Processuais</h3>
-            <p>Muitas autuações apresentam irregularidades que podem invalidá-las: erro na identificação do veículo, falha no equipamento de medição, ausência de sinalização adequada, entre outros. Nossa equipe identifica estes vícios e os utiliza na defesa.</p>
-
-            <h3>Recursos Administrativos</h3>
-            <p>Mesmo após o indeferimento da defesa prévia, é possível recorrer em diferentes instâncias administrativas. Cada recurso deve ser elaborado estrategicamente para maximizar as chances de sucesso.</p>
-
-            <h3>Medidas Judiciais</h3>
-            <p>Quando há ilegalidades no processo administrativo, é possível buscar proteção judicial através de mandado de segurança para suspender a cassação e garantir o direito de dirigir durante o julgamento do mérito.</p>
-
-            <h2>Processo de Cassação da Provisória</h2>
-
-            <h3>Notificação</h3>
-            <p>Ao cometer infração grave ou gravíssima, ou ao atingir 20 pontos, o condutor é notificado sobre a instauração do processo de cassação da CNH provisória.</p>
-
-            <h3>Prazo de Defesa</h3>
-            <p>O condutor tem 15 dias para apresentar defesa prévia contestando a infração ou o processo de cassação. Este prazo é improrrogável e deve ser rigorosamente respeitado.</p>
-
-            <h3>Decisão e Recursos</h3>
-            <p>Após análise da defesa, o órgão de trânsito emite decisão. Se desfavorável, é possível recorrer à JARI no prazo de 30 dias, e posteriormente ao CETRAN se necessário.</p>
-
-            <h3>Cassação Definitiva</h3>
-            <p>Esgotadas todas as possibilidades administrativas sem sucesso, a cassação é confirmada e o condutor deve entregar sua CNH provisória ao DETRAN.</p>
+            <ul>
+                <li><strong>Notificação:</strong> o condutor é informado sobre a abertura do processo de cassação.</li>
+                <li><strong>Prazo de defesa:</strong> há 15 dias para apresentar contestação administrativa.</li>
+                <li><strong>Recursos:</strong> caso a defesa seja indeferida, é possível recorrer à JARI e, posteriormente, ao CETRAN.</li>
+                <li><strong>Decisão final:</strong> se todos os recursos forem negados, a cassação se torna definitiva.</li>
+            </ul>
 
             <h2>Nossos Serviços para CNH Provisória</h2>
 
-            <p>A CNH em Dia Soluções oferece assessoria especializada para condutores em período probatório:</p>
+            <p>A <strong>CNH em Dia Soluções</strong> oferece assessoria técnica e suporte documental para condutores em período probatório:</p>
 
             <ul>
-                <li>Orientação preventiva sobre regras do período probatório</li>
-                <li>Análise técnica de infrações recebidas</li>
-                <li>Elaboração de defesa prévia especializada</li>
-                <li>Recursos administrativos em todas as instâncias</li>
+                <li>Orientação preventiva sobre as regras do período probatório</li>
+                <li>Análise administrativa de infrações recebidas</li>
+                <li>Elaboração de recursos administrativos</li>
                 <li>Identificação de vícios processuais e irregularidades</li>
-                <li>Medidas judiciais quando necessário</li>
-                <li>Acompanhamento completo até decisão final</li>
-                <li>Estratégias específicas para o período probatório</li>
-                <li>Monitoramento de pontuação e orientação preventiva</li>
+                <li>Acompanhamento de prazos e notificações</li>
+                <li>Estratégias personalizadas para evitar a cassação</li>
             </ul>
 
             <h2>Conversão para CNH Definitiva</h2>
 
-            <p>Ao completar 12 meses de CNH provisória sem cometer infrações graves ou gravíssimas e sem atingir 20 pontos, a conversão para CNH definitiva ocorre automaticamente. O condutor não precisa realizar nenhum procedimento, bastando aguardar a atualização no sistema do DETRAN.</p>
+            <p>Ao completar 12 meses de CNH provisória sem cometer infrações graves ou gravíssimas e sem atingir 20 pontos, a conversão para CNH definitiva ocorre automaticamente. O condutor não precisa realizar nenhum procedimento adicional — o próprio DETRAN faz a atualização.</p>
 
-            <p>Após a conversão, o condutor passa a estar sujeito às regras normais aplicáveis a todos os condutores, com limite de pontos maior e sem a restrição de tolerância zero para infrações graves.</p>
+            <h2>Por que Buscar Assessoria Técnica?</h2>
 
-            <h2>Por que Buscar Assessoria Especializada</h2>
+            <p>O período probatório é uma fase decisiva para o novo condutor. Uma única infração pode gerar a perda de todo o investimento feito no processo de habilitação.</p>
 
-            <p>O período probatório é uma fase crítica na vida do condutor. Uma única infração pode resultar na perda de todo o investimento feito no processo de habilitação e causar transtornos significativos por anos.</p>
-
-            <p>Nossa equipe possui experiência específica em defesas para condutores em período probatório, conhecendo as particularidades e estratégias mais eficazes para este tipo de caso. Atuamos de forma ágil e técnica para proteger seu direito de dirigir.</p>
-
-            <p>Não arrisque perder sua CNH provisória por falta de orientação adequada. Conte com quem entende do assunto e pode fazer a diferença no resultado do seu caso.</p>
+            <p>A equipe da <strong>CNH em Dia Soluções</strong> atua com orientação técnica e acompanhamento administrativo, ajudando o condutor a evitar prejuízos e manter sua habilitação regularizada de forma segura e legal.</p>
 
             <div style="text-align: center; margin-top: 3rem;">
-                <a href="contato.html" class="cta-button">Proteger Minha Provisória Agora</a>
+                <a href="contato.html" class="cta-button">Evitar Perda da Provisória Agora</a>
             </div>
         </div>
     </div>
@@ -222,6 +165,7 @@
             <p>&copy; 2025 CNH em Dia Soluções. Todos os direitos reservados.</p>
         </div>
     </footer>
+
     <script>
         const menuToggle = document.querySelector('.menu-toggle');
         const navLinks = document.querySelector('.nav-links');
@@ -240,4 +184,3 @@
     </script>
 </body>
 </html>
-
