--- a/servicos.html
+++ b/servicos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nossos Serviços - CNH em Dia Soluções</title>
-    <meta name="description" content="Conheça todos os serviços especializados da CNH em Dia: multas, suspensão, cassação e perda de provisória.">
+    <meta name="description" content="Conheça os serviços da CNH em Dia: assessoria administrativa em multas, suspensão, cassação e perda de CNH provisória.">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
             <a href="index.html" class="logo">CNH em <span>Dia Soluções</span></a>
             <ul class="nav-links">
                 <li><a href="index.html">Início</a></li>
-                <li><a href="servicos.html">Serviços</a></li>
+                <li><a href="servicos.html" class="active">Serviços</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
@@ -24,111 +24,115 @@
             </div>
         </nav>
     </header>
+
     <section class="hero">
         <div class="hero-content">
             <h1>Nossos Serviços</h1>
-            <p>Soluções completas e especializadas para todos os problemas relacionados à sua CNH</p>
+            <p>Assessoria completa e especializada para regularizar sua CNH com segurança e eficiência.</p>
         </div>
     </section>
+
     <section>
         <div class="cards-container">
+
             <div class="card">
                 <div class="card-icon">🚗</div>
                 <h3>Multas de Trânsito</h3>
-                <p>Oferecemos análise técnica completa de multas de trânsito, identificando possíveis irregularidades e elaborando recursos fundamentados. Nossa equipe atua em todas as fases: defesa prévia, recurso em primeira e segunda instância administrativa.</p>
+                <p>Oferecemos análise técnica completa de multas, identificando irregularidades e elaborando recursos administrativos fundamentados. Nosso foco é garantir a defesa de seus direitos dentro das normas legais.</p>
                 <ul style="margin-top: 1rem; color: var(--medium-gray);">
+                    <li>Análise técnica de infrações</li>
                     <li>Defesa prévia de autuação</li>
                     <li>Recursos administrativos</li>
-                    <li>Análise técnica de infrações</li>
-                    <li>Contestação de multas indevidas</li>
-                    <li>Acompanhamento processual completo</li>
+                    <li>Contestação de notificações indevidas</li>
+                    <li>Acompanhamento processual</li>
                 </ul>
-                <a href="multas.html" class="card-link">Saiba mais sobre Multas →</a>
+                <a href="multas.html" class="card-link">Saiba mais →</a>
             </div>
 
             <div class="card">
                 <div class="card-icon">⚠️</div>
                 <h3>Suspensão da CNH</h3>
-                <p>A suspensão do direito de dirigir pode ocorrer por acúmulo de pontos ou infrações gravíssimas. Atuamos na defesa administrativa, buscando reverter ou reduzir o período de suspensão através de recursos técnicos e jurídicos.</p>
+                <p>Nosso trabalho consiste em assessorar condutores que receberam notificações de suspensão, oferecendo estratégias para reduzir o tempo de penalidade ou reverter o processo dentro das vias administrativas.</p>
                 <ul style="margin-top: 1rem; color: var(--medium-gray);">
-                    <li>Defesa em processos de suspensão</li>
-                    <li>Recursos contra penalidades</li>
-                    <li>Análise de pontuação</li>
-                    <li>Estratégias para redução de prazo</li>
-                    <li>Orientação sobre direitos do condutor</li>
+                    <li>Defesa administrativa em processos de suspensão</li>
+                    <li>Análise de pontuação e histórico de infrações</li>
+                    <li>Recursos em todas as instâncias administrativas</li>
+                    <li>Orientação personalizada ao condutor</li>
                 </ul>
-                <a href="suspensao.html" class="card-link">Saiba mais sobre Suspensão →</a>
+                <a href="suspensao.html" class="card-link">Saiba mais →</a>
             </div>
 
             <div class="card">
                 <div class="card-icon">🚫</div>
                 <h3>Cassação da CNH</h3>
-                <p>A cassação é a penalidade mais grave aplicada ao condutor. Prestamos assessoria completa em processos de cassação, com defesa técnica especializada e acompanhamento em todas as instâncias administrativas e judiciais.</p>
+                <p>Atuamos na esfera administrativa com análise detalhada dos autos e elaboração de recursos técnicos, sempre observando o devido processo legal. Quando necessário, indicamos parceiros jurídicos para acompanhamento judicial.</p>
                 <ul style="margin-top: 1rem; color: var(--medium-gray);">
-                    <li>Defesa em processos de cassação</li>
-                    <li>Recursos administrativos e judiciais</li>
-                    <li>Análise de infrações graves</li>
-                    <li>Proteção dos direitos do condutor</li>
-                    <li>Orientação para reabilitação</li>
+                    <li>Assessoria em processos de cassação</li>
+                    <li>Análise de irregularidades processuais</li>
+                    <li>Recursos administrativos</li>
+                    <li>Encaminhamento a parceiros jurídicos (quando aplicável)</li>
                 </ul>
-                <a href="cassacao.html" class="card-link">Saiba mais sobre Cassação →</a>
+                <a href="cassacao.html" class="card-link">Saiba mais →</a>
             </div>
 
             <div class="card">
                 <div class="card-icon">📋</div>
-                <h3>Perda da Provisória</h3>
-                <p>Condutores com permissão para dirigir (CNH provisória) estão sujeitos a regras mais rígidas. Oferecemos defesa especializada para quem corre risco de perder a provisória, com estratégias específicas para este período probatório.</p>
+                <h3>Perda da CNH Provisória</h3>
+                <p>Condutores em período probatório contam com nossa assessoria para compreender as regras, contestar infrações e evitar a perda da CNH provisória com estratégias preventivas e administrativas.</p>
                 <ul style="margin-top: 1rem; color: var(--medium-gray);">
-                    <li>Defesa de condutores em período probatório</li>
-                    <li>Recursos contra perda da provisória</li>
-                    <li>Orientação sobre regras especiais</li>
-                    <li>Análise de infrações no período</li>
-                    <li>Estratégias de proteção da habilitação</li>
+                    <li>Defesa administrativa de condutores em período probatório</li>
+                    <li>Monitoramento de pontuação</li>
+                    <li>Contestação de infrações</li>
+                    <li>Orientação preventiva</li>
                 </ul>
-                <a href="provisoria.html" class="card-link">Saiba mais sobre Provisória →</a>
+                <a href="provisoria.html" class="card-link">Saiba mais →</a>
             </div>
+
         </div>
     </section>
+
     <section style="background: var(--light-gray);">
         <h2>Como Trabalhamos</h2>
-        <p class="section-subtitle">Processo transparente e eficiente do início ao fim</p>
+        <p class="section-subtitle">Transparência e eficiência do início ao fim</p>
         
         <div class="cards-container">
             <div class="card">
                 <div class="card-icon">1️⃣</div>
                 <h3>Análise Inicial</h3>
-                <p>Avaliação gratuita do seu caso, identificando a melhor estratégia de defesa e as chances de sucesso.</p>
+                <p>Realizamos uma avaliação gratuita e detalhada do caso, identificando as melhores alternativas administrativas.</p>
             </div>
 
             <div class="card">
                 <div class="card-icon">2️⃣</div>
-                <h3>Coleta de Documentos</h3>
-                <p>Solicitação e organização de toda documentação necessária para fundamentar a defesa.</p>
+                <h3>Documentação</h3>
+                <p>Auxiliamos na coleta e conferência dos documentos necessários para iniciar o processo com segurança.</p>
             </div>
 
             <div class="card">
                 <div class="card-icon">3️⃣</div>
                 <h3>Elaboração da Defesa</h3>
-                <p>Preparação técnica e jurídica de recursos, petições e documentos com fundamentação sólida.</p>
+                <p>Montamos defesas e recursos administrativos embasados, conforme as normas de trânsito e prazos legais.</p>
             </div>
 
             <div class="card">
                 <div class="card-icon">4️⃣</div>
-                <h3>Protocolo e Acompanhamento</h3>
-                <p>Protocolo nos órgãos competentes e acompanhamento constante até a decisão final.</p>
+                <h3>Acompanhamento</h3>
+                <p>Fazemos o acompanhamento completo do processo até o resultado final, mantendo você informado a cada etapa.</p>
             </div>
         </div>
     </section>
+
     <section style="text-align: center; padding: 60px 5%;">
-        <h2>Precisa de um Desses Serviços?</h2>
-        <p class="section-subtitle">Entre em contato e receba atendimento especializado</p>
+        <h2>Precisa Regularizar Sua CNH?</h2>
+        <p class="section-subtitle">Entre em contato e receba uma análise personalizada do seu caso</p>
         <a href="contato.html" class="cta-button">Falar com Especialista</a>
     </section>
+
     <footer>
         <div class="footer-content">
             <div class="footer-section">
                 <h3>CNH em Dia Soluções</h3>
-                <p>Soluções especializadas para manter sua habilitação regularizada e você na estrada.</p>
+                <p>Assessoria administrativa especializada em processos de trânsito, ajudando você a manter sua habilitação em dia.</p>
             </div>
 
             <div class="footer-section">
@@ -162,6 +166,9 @@
 
         <div class="footer-bottom">
             <p>&copy; 2025 CNH em Dia Soluções. Todos os direitos reservados.</p>
+            <p style="font-size: 0.85rem; color: #aaa; margin-top: 5px;">
+                A CNH em Dia Soluções atua exclusivamente na esfera administrativa. Casos judiciais são encaminhados a advogados parceiros regularmente inscritos na OAB.
+            </p>
         </div>
     </footer>
 
@@ -172,32 +179,19 @@
         menuToggle.addEventListener('click', () => {
             navLinks.classList.toggle('active');
         });
+
         window.addEventListener('scroll', () => {
             const header = document.querySelector('header');
-            if (window.scrollY > 100) {
-                header.classList.add('scrolled');
-            } else {
-                header.classList.remove('scrolled');
-            }
+            header.classList.toggle('scrolled', window.scrollY > 100);
         });
-
-        const observerOptions = {
-            threshold: 0.1,
-            rootMargin: '0px 0px -100px 0px'
-        };
 
         const observer = new IntersectionObserver((entries) => {
             entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    entry.target.classList.add('fade-in');
-                }
+                if (entry.isIntersecting) entry.target.classList.add('fade-in');
             });
-        }, observerOptions);
+        }, { threshold: 0.1 });
 
-        document.querySelectorAll('.card').forEach(card => {
-            observer.observe(card);
-        });
+        document.querySelectorAll('.card').forEach(card => observer.observe(card));
     </script>
 </body>
 </html>
-
